--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  supabase_flutter:
+  supabase_flutter: ^2.5.7
   flutter_dotenv: ^5.1.0
   curved_navigation_bar: 1.0.6
   flutter_riverpod: ^2.0.0
   image_picker: ^0.8.4+4
-  exif: ^1.0.3
-  cached_network_image: ^3.1.0
-  skeleton_loader: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
