--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,11 @@ dependencies:
   curved_navigation_bar: 1.0.6
   flutter_riverpod: ^2.0.0
   image_picker: ^0.8.4+4
+  uuid: ^3.0.4
+  exif: ^2.0.0
+  flutter_image_compress: ^1.1.0
+  cached_network_image: ^3.0.0
+  photo_view: ^0.14.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
